src/elements/snapshots/panoramix__elements__clickable__tests__new_clickable-2.snap
---
source: src/elements/clickable.rs
expression: clickable_data

---
ClickableData {
    child: LabelData {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
    reserved_widget_id: None,
}
