src/elements/snapshots/panoramix__elements__clickable__tests__new_clickable.snap
---
source: src/elements/clickable.rs
expression: clickable

---
Clickable {
    child: Label {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
    reserved_widget_id: None,
}
